src/app/shared/components/challenge-list/challenge-list.component.scss
.challenges-container {
	padding-bottom: 2%;
	margin: 2% 10px 70px;

	.challenges-box {
		padding: 10px;
		background: #f1f1f1;

		.challenge-element {
			width: 100%;
			height: 20vw;
			display: flex;
			flex-direction: row;
			justify-content: space-evenly;
			align-items: center;
			margin-bottom: 10px;

			&:last-of-type {
				margin-bottom: 0;
			}

			.challenge-picture {
				height: 100%;
				width: 50%;
				//background: #fff;
				margin-right: 10px;

				img {
					display: block;
					height: 100%;
					margin: 0 auto;
				}
			}

			.challenge-description {
				height: 100%;
				width: 50%;
				//margin-left: 10px;

				display: flex;
				//flex-wrap: nowrap;
				flex-direction: column;

				.challenge-title {
					width: 100%;
					font-weight: 700;
				}

				.challenge-username {
					width: 100%;
					height: 100%;
					font-size: 13px;
				}

				.challenge-category {
					width: 100%;

					span {
						display: inline-block;
						color: #fff;
						font-size: 13px;
						padding: 3px 5px;
						border-radius: 20px;
						text-align: center;
					}
				}
			}
		}
	}
}

.onscreen-message {
	color: #788fb9;
	font-style: italic;
	font-size: 1.3em;
	text-align: center !important;
	padding: 20px;
}

app-spinner {
	width: 60vw !important;
	margin: 0 auto;
}

